--- a/Style/style.css
+++ b/Style/style.css
@@ -20,13 +20,14 @@ nav li {
 footer {
   background-color: #305673;
   width: 100%;
-  height: 28%;
+  height: 200px;
 }
 footer ul {
   list-style: none;
   font-family: helvetica;
   font-size: 18px;
   color: white;
+  margin: 0px;
 }
 footer li {
   display: list-item;
@@ -38,10 +39,98 @@ footer p {
   font-size: 18px;
   color: white;padding-left: 40%;
 }
+.addto input[type=submit] {
+  padding:15px 80px;
+  color: #000;
+  background:#e4b833;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 24px;
+}
+.homesearch input[type=submit] {
+  padding:13px 15px;
+  color: #000;
+  background:#e4b833;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 20px;
+}
+.homesearch form {
+  padding-left: 30%;
+  padding-top: 2%;
+}
+.homesearch input[type=search] {
+  padding: 10px 10px;
+  color: #000;
+  width: 45%;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 24px;
+}
+.placeorder input[type=submit] {
+  padding:20px 75px;
+  color: #000;
+  background:#e4b833;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 20px;
+}
+nav input[type=submit] {
+  padding:13px 15px;
+  color: #000;
+  background:#e4b833;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 20px;
+}
+nav form {
+  padding-left: 50%;
+}
+nav input[type=search] {
+  padding: 10px 10px;
+  color: #000;
+  width: 60%;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 24px;
+}
+.payinfo input[type=search] {
+  padding: 10px 10px;
+  color: #000;
+  width: 45%;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 0px;
+  font-size: 20px;
+}
+form {
+  padding-left: 15%;
+}
+form h3 {
+  font-family: Helvetica;
+  font-size: 24px;
+  color: #000;
+}
 .Shmamazon {
   width: 20%;
   padding-left: 15%;
-  padding-bottom: 4%;
+  padding-bottom: 3%;
+}
+.Shmamazon3 {
+  width: 20%;
+  padding-left: 15%;
 }
 .Shmamazon2 {
   width: 20%;
@@ -50,11 +139,9 @@ footer p {
 .icon {
   width: 5%;
   padding-left: 25%;
-  padding-bottom: 4%;
 }
 .icon2 {
   width: 5%;
-  padding-bottom: 4%;
 }
 
 .coverphoto {
@@ -65,11 +152,6 @@ footer p {
   background-color: #305673;
   width: 100%;
   height: 19%;
-}
-.searchbox {
-  font-size: 48px;
-  width: 30%;
-  padding-left: 20%;
 }
 .homeitems {
   background-color: #e3dfd5;
@@ -251,7 +333,7 @@ footer p {
 .checkout {
   background-color: #e3dfd5;
   width: 100%;
-  height: 200%;
+  height: 750px;
 }
 .dailydeals {
   width: 88%;
@@ -293,4 +375,21 @@ footer p {
   margin: 0;
   padding-left: 5%;
   padding-top: 2%;
+}
+.payinfo {
+  width: 55%;
+  padding-left: 5%;
+}
+.placeorder {
+  width: 20.5%;
+  float: left;
+}
+.floatbox {
+  float: left;
+}
+.reviewpic {
+  width: 25%;
+}
+.credcard {
+  width: 10%;
 }
